# ignite_test

./: .env  .gitignore  .pylintrc  Makefile  README.md  pyproject.toml  requirements.md
data_retrieval_lambda/: data_retrieval_lambda.py  pyproject.toml  test.sh
data_retrieval_lambda/tests/: test_data_retrieval_lambda.py
file_parser_lambda/: file_parser_lambda.py  prepare.sh  pyproject.toml  test.sh
file_parser_lambda/tests/: test_file_parser_lambda.py
ignite_test/: file_parser_lambda.py  main.py
infrastructure/: 01_s3_bucket__csv_files.tf  02_lambda__file_parser.tf  03_rds__iot_data.tf  04_lambda__data_retrieval.tf  05_api-gateway__data_retrieval.tf  iam.tf  main.tf  terraform.tf  variables.tf
setup_sql/: create_mysql_schema.py  pyproject.toml  run.sh
tests/: test_main.py
