[tool.poetry]
name = "ignite_test"
version = "0.0.1"
description = ""
license = ""
authors = ["Stephan Malan <stephanmalan.rob@gmail.com>"]
readme = "README.md"
packages = [{include = "ignite_test"}]


[tool.poetry.scripts]
ignite_test = "ignite_test.main:main"


[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.2"
boto3 = "^1.28.62"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.0.292"
mypy = "^1.6.0"
pylint = "^3.0.1"
aws-lambda-typing = "^2.18.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
coverage = "^7.3.2"

[tool.black]
line-length = 120


[tool.ruff]
line-length = 120


[tool.pytest.ini_options]
pythonpath = ["."]


[tool.mypy]
strict = true
exclude = ["tests"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
