[tool.poetry]
name = "setup-sql"
version = "0.1.0"
description = "Python code for setting up RDS MySQL database"
authors = ["Stephan Malan <stephanmalan.rob@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.28.62"
pymysql = "^1.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
boto3-stubs = { extras = ["essential"], version = "^1.28.62" }
mypy = "^1.6.0"
pylint = "^3.0.1"
ruff = "^0.0.292"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
